<resources>
    <string name="app_name">GoodMetrics</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="write_permission_denied_text">We will store the images you take on Super Money in your phone. Super Money does not store any other images on your phone.</string>
    <string name="retry">Retry</string>
    <string name="retake">Retake</string>
    <string name="btn_ok">OK</string>
    <string name="username">Mobile Number</string>
    <string name="school_name">School Name</string>
    <string name="location">Location Name</string>
    <string name="name_of_school_representative">Name of the school representative whom mobiliser met</string>
    <string name="mobile_number_of_school_representative">Mobile Number of the school representative whom mobiliser met</string>
    <string name="u_dise_code">UDISE Code</string>
    <string name="ward">Ward/Block</string>
    <string name="district">District</string>
    <string name="school_Code">School Code</string>
    <string name="todays_visit">Today’s Visits</string>
    <string name="todays_visit_left">visits left to sync</string>
    <string name="visit_today">visits today</string>
    <string name="enter_school_Code">Enter School Code</string>
    <string name="enter_school_name">Enter School name</string>
    <string name="remarks">Remark</string>
    <string name="captured_images">Captured Images</string>
    <string name="type_code">Type your 6 digit security code</string>
    <string name="username_placeholder">Enter here</string>
    <string name="enter_here">Enter here</string>
    <string name="enter_remark">Enter remark</string>
    <string name="entervalue">Enter value</string>
    <string name="login_welcome">Welcome to \nGoodMetrics! </string>
    <string name="login_info">Please sign-in to your account.</string>
    <string name="rights">Hindustan Unilever Limited\n© Unilever 2024</string>
    <string name="selfie_at_school">Selfie at first school</string>
    <string name="selfie_at_house">Selfie at the location</string>
    <string name="selfie_at_house_description">Ensure full face and shoulders are visible</string>
    <string name="picture_school_name">Picture of the school name</string>
    <string name="material_info">Full image of mobiliser with Curriculum material</string>
    <string name="selfie_with_school_name">Selfie with the school name or UDISE code</string>
    <string name="ack_letter_picture">Acknowledgement letter picture</string>
    <string name="or_select_location">Or select from below</string>
    <string name="login_button">Login</string>
    <string name="capture">Capture</string>
    <string name="record">Record</string>
    <string name="save">Save</string>
    <string name="get_otp">Get OTP</string>
    <string name="proceed">Proceed</string>
    <string name="punch_in">Punch In</string>
    <string name="punch_out">Punch Out</string>
    <string name="search">Search</string>
    <string name="Sync">Sync</string>
    <string name="mark_your_attendance">Mark your attendance</string>
    <string name="status">Status</string>
    <string name="location_name">Location name</string>
    <string name="my_visits">My Visits</string>
    <string name="offline_visits">Offline Visits</string>
    <string name="communicators">Communicators</string>
    <string name="add_household">Add New Household</string>
    <string name="my_area">My Area</string>
    <string name="my_location">My Location</string>
    <string name="my_performance">My Performance</string>
    <string name="visit_number">Visits today</string>
    <string name="punch_time">Punch in time </string>
    <string name="my_attendence">My Attendance</string>
    <string name="attendance">Mark Attendance  </string>
    <string name="school_code_heading">School Code </string>
    <string name="school_activity_heading">School Activity</string>
    <string name="attendance_info">Ensure images are clear or retake them </string>
    <string name="school_code_info">Select your visit for this school</string>
    <string name="school_activity_sub_title">Fill up the following details</string>
    <string name="time">Time </string>
    <string name="date">Date </string>
    <string name="start_new_project">Start new projects </string>
    <string name="otp_info">Make your project management easy!</string>
    <string name="terms_condition">I agree to <a style="color:#2C41CA" href="http://somesite.com/">privacy policy &amp; terms</a></string>
    <string name="otp_sub_info1">Enter the verification code from the mobile no </string>
    <string name="otp_sub_info2"> in the field below.</string>
    <string name="visit">Visit</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="visit_completed">%1$d Completed</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="disce_code">UDISE Code</string>
    <string name="recording">Audio recording has started</string>
    <string name="teacher_no">No. of teachers trained</string>
    <string name="student_no">No. of students as per record</string>
    <string name="books_no">No. of books handed over to school</string>
    <string name="number_of_books_given">No. of books given to school</string>
    <string name="tracker_no">No. of filled trackers collected</string>
    <string name="more_tracker">School asked to revisit for more tracker collection</string>
    <string name="teachers_trained">No. of teachers trained</string>
    <string name="representetive_name">Name of the school representative who collected the books</string>
    <string name="representetive_number">Mobile Number of the school representative who collected the books</string>
    <string name="principal_name">Name of the Principal</string>
    <string name="principal_number">Mobile number of the Principal</string>
    <string name="revisit_applicable">Revisit Applicable</string>
    <string name="school_pic1">Picture of the school name</string>
    <string name="school_pic2">Selfie with the school name or UDISE code</string>
    <string name="school_pic3">Image of students showing the filled trackers in books</string>
    <string name="school_pic4">Image of teachers handing over the trackers</string>
    <string name="school_pic5">Acknowledgement letter picture</string>
    <string name="form1">Name of the Person contacted in school</string>
    <string name="form2">Mobile number of the person contacted in school</string>
    <string name="form3">Name of the Principal</string>
    <string name="form4">Mobile number of the Principal</string>
    <string name="form5">Revisit Applicable</string>
    <string name="form6">Is the Curriculum on track?</string>
    <string name="till_date">Till Date</string>
    <string name="view_school_location">View School Location</string>
    <string name="no_of_books_handed_over">No. of books handed over to school</string>
    <string name="no_of_books_given">No. of books given to school</string>
    <string name="submit">Submit</string>
    <string name="select_flathouse_number">Select Flat/House Number</string>
    <string name="session_expire">Session Expired, Login Again</string>
    <string name="mobiliser">Mobiliser</string>
    <string name="have_the_books_distribution_to_students_done">Have the books distribution to students done?</string>
    <string name="was_video_shared_with_teacher">Was video shared with Teacher?</string>
    <string name="pending">Pending</string>
    <string name="todays_visits">Today’s Visits</string>
    <string name="completed">Completed</string>
    <string name="previous_visits">Previous Visits</string>
    <string name="mobilisers_image">Mobilisers Image</string>
    <string name="mobiliser_name">Mobiliser Name</string>
    <string name="logout">Logout</string>
    <string name="visit_1_header">Visit 1 School Activity</string>
    <string name="visit_pic_1">Image of the school\nbuilding</string>
    <string name="visit_pic_2">Selfie with school UDISE Code</string>
    <string name="visit_pic_3">Image of teachers seeing\ntraining video with books\nplaced on table</string>
    <string name="visit2_pic_detail_3">Image of teachers\nteaching the Curriculum in the class</string>
    <string name="visit_pic_6">Image of filled trackers on principal’s desk with the principal</string>
    <string name="add_school_code">Add school code</string>
    <string name="add_school">Add School</string>
    <string name="ward_block">Ward/Block</string>
    <string name="state">State</string>
    <string name="btnAdd">Add</string>
    <string name="btnClose">Close</string>
</resources>