<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/public_sans_semi_bold"
            android:text="@string/add_school"
            android:textColor="#2F2B3D"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans"
            android:text="@string/add_school_code"
            android:textColor="#2F2B3D"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_15sdp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:placeholderText="@string/enter_here"
            app:prefixTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSchoolCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:inputType="number"
                android:text=''/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans"
            android:text="@string/school_name"
            android:textColor="#2F2B3D"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:placeholderText="@string/enter_here"
            app:prefixTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSchoolName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text=''/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans"
            android:text="@string/ward_block"
            android:textColor="#2F2B3D"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:placeholderText="@string/enter_here"
            app:prefixTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtWardBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text=''/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans"
            android:text="@string/state"
            android:textColor="#2F2B3D"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"/>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:placeholderText="@string/enter_here"
            app:prefixTextColor="@color/black">

            <AutoCompleteTextView
                android:id="@+id/edtState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="16sp"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans"
            android:text="@string/district"
            android:textColor="#2F2B3D"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"/>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/public_sans"
            app:boxStrokeErrorColor="@color/red"
            app:errorEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:placeholderText="@string/enter_here"
            app:prefixTextColor="@color/black">

            <AutoCompleteTextView
                android:id="@+id/edtDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="16sp"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="end">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_gray"
                android:fontFamily="@font/publicsans"
                android:text="@string/btnClose"
                android:textColor="@color/dark_gray"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/_10sdp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_blue"
                android:fontFamily="@font/publicsans"
                android:text="@string/btnAdd"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
