<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hul.curriculam.ui.form1Details.Form1ViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f8f9fa">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:paddingBottom="56dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="16dp"
            android:background="@color/white"
            app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:lineHeight="20dp"
                android:text="@string/disce_code"
                android:textColor="#6d6b77"
                android:textFontWeight="400"
                android:textSize="13sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:lineHeight="20dp"
                android:text='@{viewModel.visitData.visit_1.u_dice_code.value.toString()}'
                android:textColor="#444050"
                android:textFontWeight="700"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:layout_marginTop="24dp"
                android:text="@string/school_name"
                android:textColor="#6d6b77"
                android:textFontWeight="400"
                android:textSize="13sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:lineHeight="20dp"
                android:text='@{viewModel.visitData.visit_1.school_name.value.toString()}'
                android:textColor="#444050"
                android:textFontWeight="700"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:layout_marginTop="24dp"
                android:text="@string/books_no"
                android:textColor="#6d6b77"
                android:textFontWeight="400"
                android:textSize="13sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/public_sans"
                android:lineHeight="20dp"
                android:text='@{viewModel.visitData.visit_1.number_of_books_distributed.value.toString()}'
                android:textColor="#444050"
                android:textFontWeight="700"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="bottom"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:layout_marginTop="24dp"
                android:text="@string/number_of_books_given"
                android:textColor="#6d6b77"
                android:textFontWeight="400"
                android:textSize="13sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/public_sans"
                android:lineHeight="20dp"
                android:id="@+id/noOfBooksGiven"
                android:text='@{viewModel.visitData.visit_1.number_of_books_given_school.value.toString()}'
                android:textColor="#444050"
                android:textFontWeight="700"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="bottom"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:layout_marginTop="24dp"
                android:text="@string/form1"
                android:textColor="#6d6b77"
                android:textFontWeight="400"
                android:textSize="13sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:lineHeight="20dp"
                android:text='@{viewModel.visitData.visit_1.name_of_the_school_representative_who_mobiliser_met.value.toString()}'
                android:textColor="#444050"
                android:textFontWeight="700"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:layout_marginTop="24dp"
                android:text="@string/form2"
                android:textColor="#6d6b77"
                android:textFontWeight="400"
                android:textSize="13sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:lineHeight="20dp"
                android:text='@{viewModel.visitData.visit_1.number_of_the_school_representative_who_mobiliser_met.value.toString()}'
                android:textColor="#444050"
                android:textFontWeight="700"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:layout_marginTop="24dp"
                android:text="@string/form3"
                android:textColor="#6d6b77"
                android:textFontWeight="400"
                android:textSize="13sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:lineHeight="20dp"
                android:text='@{viewModel.visitData.visit_1.name_of_the_school_principal_auditor.value.toString()}'
                android:textColor="#444050"
                android:textFontWeight="700"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:layout_marginTop="24dp"
                android:text="@string/form4"
                android:textColor="#6d6b77"
                android:textFontWeight="400"
                android:textSize="13sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:lineHeight="20dp"
                android:text='@{viewModel.visitData.visit_1.number_of_the_school_principal_auditor.value.toString()}'
                android:textColor="#444050"
                android:textFontWeight="700"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:layout_marginTop="24dp"
                android:text="@string/remarks"
                android:textColor="#6d6b77"
                android:textFontWeight="400"
                android:textSize="13sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/public_sans"
                android:lineHeight="20dp"
                android:text='@{viewModel.visitData.visit_1.remark.value.toString()}'
                android:textColor="#444050"
                android:textFontWeight="700"
                android:textSize="15sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/llImages">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/llImg1"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginEnd="@dimen/_10sdp">
                        
                        <ImageView
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/button_background_gray"
                            android:id="@+id/img1"
                            android:scaleType="centerCrop"/>

                        <TextView
                            android:id="@+id/img1Desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/public_sans"
                            android:text="@string/selfie_with_school_name"
                            android:textColor="#6d6b77"
                            android:textSize="@dimen/_8sdp"
                            android:layout_marginTop="@dimen/_5sdp"/>
                        
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llImg2"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="@dimen/_10sdp">

                        <ImageView
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:src="@drawable/button_background_gray"
                            android:id="@+id/img2"
                            android:scaleType="centerCrop"
                            />

                        <TextView
                            android:id="@+id/img2Desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/public_sans"
                            android:text="@string/ack_letter_picture"
                            android:textColor="#6d6b77"
                            android:textSize="@dimen/_8sdp"
                            android:layout_marginTop="@dimen/_5sdp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
        </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>